--- a/cloud-chat/src/app/chat/chat.component.scss
+++ b/cloud-chat/src/app/chat/chat.component.scss
@@ -1,10 +1,89 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body { font: 13px Helvetica, Arial; }
-form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-#messages { list-style-type: none; margin: 0; padding: 0; }
-#messages li { padding: 5px 10px; }
-#messages li:nth-child(odd) { background: #eee; }
+form { padding: 3px; position: fixed; bottom: 0; width: 80%; }
+form input { border: 0; padding: 10px; width: 90%; border-radius: 10px; margin-right: .5%; }
+form button {
+  width: 9%; background: rgb(130, 224, 255); border: none; border-radius: 10px; padding: 10px; }
+#messages { width: 100%; height: 100%; margin: 0; padding: 0; }
 
+#chat-component-wrapper {
+  width: 100%;
+  height: 100%;
+}
 
+.alert {
+  position:absolute;
+  top:0px;
+  z-index: 1000;
+  width:100%;
+  height:0;
+  box-sizing:border-box;
+  color:white;
+  text-align:center;
+  background:rgba(0,200,0,1);
+  overflow:hidden;
+  box-sizing:border-box;
+  transition:height .2s;
+  display: inline-block;
+}
+
+#chat-rooms-selector {
+  position: relative;
+  float: left;
+  width: 20%;
+  height: 100%;
+  background: #fff;
+}
+
+.chat-room-selector {
+  position: relative;
+  float: left;
+  width: 100%;
+  height: 50px;
+  background: #eee;
+  border-bottom: 2px solid #ccc;
+}
+
+#chat-room {
+  position: relative;
+  float: left;
+  width: 80%;
+  height: 100%;
+}
+
+.message-wrapper {
+  position: relative;
+  float: left;
+  width: 100%;
+}
+
+.message-personal {
+  float: right;
+  padding: 10px;
+  margin: 5px;
+  width: 70%;
+  border-radius: 10px;
+  background: #fff;
+}
+
+.message {
+  float: left;
+  padding: 10px;
+  margin: 5px;
+  width: 70%;
+  border-radius: 10px;
+  background: #ddd;
+}
+.message-sender {
+  float: left;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 10px;
+  background: #00f;
+  color: #fff;
+}
+
+.active{
+  height:50px;
+  line-height: 49px;
+}
