--- a/cloud-chat/src/app/login/login.component.html
+++ b/cloud-chat/src/app/login/login.component.html
@@ -1,5 +1,4 @@
-<form class="login">
-  <input type="text" placeholder="Username">
-  <input type="password" placeholder="Password">
+<form class="login" (ngSubmit)="onClickLogin()">
+  <input [ngClass]="required?'required':''" name="username" type="text" placeholder="Username" [(ngModel)]="username">
   <button>Login</button>
 </form>
