--- a/cloud-chat/src/app/chat/chat.component.html
+++ b/cloud-chat/src/app/chat/chat.component.html
@@ -1,13 +1,27 @@
 <div id="chat-component-wrapper">
-  <div [ngClass]="alertMessage?'active':''" class="alert" ><span>{{alertMessage}}</span></div>
   <div id="chat-rooms-selector">
-    <div *ngFor="let room of chatrooms" class="chat-room-selector">{{room}}</div>
+    <div *ngFor="let room of chatrooms | keyvalue" class="chat-room-selector" (click)="selected = room.key">
+      <div class="centered-text">{{room.value.name}}</div>
+    </div>
+    <button id="add-group" (click)="onClickCreateGroup()">
+      +
+    </button>
   </div>
   <div id="chat-room">
+    <div id="header">
+      <p>
+        <span>You</span>
+        <span *ngFor="let user of chatrooms[selected].users">, {{user.name}}</span>
+      </p>
+    </div>
     <div id="messages">
-      <div class="message-wrapper" *ngFor="let msg of messages">
+      <div [ngClass]="{'positive':positive, 'negative': !positive, 'active': alertMessage}" class="alert" ><span>{{alertMessage}}</span></div>
+      <div class="message-wrapper" *ngFor="let msg of chatrooms[selected].messages">
         <div *ngIf="msg.sender" class="message-sender">{{msg.sender}}:</div>
-        <div [ngClass]="msg.sender?'message':'message-personal'" class="message-personal"><span class="message-text">{{msg.message}}</span></div>
+        <div [ngClass]="msg.sender?'message':'message-personal'" class="message-personal">
+          <div class="message-text">{{msg.message}}</div>
+          <div class="message-timestamp">{{msg.timeStampString}}</div>
+        </div>
       </div>
     </div>
     <form (ngSubmit)="onClickSend()">
@@ -15,5 +29,4 @@
       <button>Send</button>
     </form>
   </div>
-
 </div>
