--- a/cloud-chat/src/app/chat/chat.component.scss
+++ b/cloud-chat/src/app/chat/chat.component.scss
@@ -4,15 +4,24 @@ form { padding: 3px; position: fixed; bottom: 0; width: 80%; }
 form input { border: 0; padding: 10px; width: 90%; border-radius: 10px; margin-right: .5%; }
 form button {
   width: 9%; background: rgb(130, 224, 255); border: none; border-radius: 10px; padding: 10px; }
-#messages { width: 100%; height: 100%; margin: 0; padding: 0; }
+#messages { width: 100%; height: 100%; margin: 0; padding-top: 50px!important; padding-bottom: 50px!important;}
 
 #chat-component-wrapper {
   width: 100%;
   height: 100%;
 }
 
+.clickable {
+  cursor: pointer;
+}
+.clickable:hover {
+  background: #eee;
+}
+.selected-room {
+  background: aquamarine;
+}
+
 .alert {
-  
   z-index: 1000;
   width:100%;
   height:0;
@@ -66,11 +75,14 @@ form button {
   float: left;
   width: 80%;
   height: 100%;
+  padding-bottom: 50px;
+  box-sizing: padding-box;
+  overflow-y: scroll;
 }
 
 #header {
-  position: relative;
-  float: left;
+  position: fixed;
+  top:0;
   width: 100%;
   text-wrap: normal;
   min-height: 50px;
