--- a/cloud-chat/src/app/chat/chat.component.html
+++ b/cloud-chat/src/app/chat/chat.component.html
@@ -22,12 +22,19 @@
           <div class="message-text">{{msg.message}}</div>
           <div class="message-timestamp">{{msg.timeStampString}}</div>
         </div>
+        <div *ngIf="msg.media">
+          <img *ngIf="msg.media.split(':')[1].split('/')[0] == 'image'" [src]="msg.media" width="500px" alt="">
+          <video *ngIf="msg.media.split(':')[1].split('/')[0] == 'video'" [src]="msg.media" width="500px"></video>
+          <audio *ngIf="msg.media.split(':')[1].split('/')[0] == 'audio'" [src]="msg.media" width="500px"></audio>
+        </div>
       </div>
     </div>
     <button *ngIf="!chatrooms[selected].isMember" id="join-chat" (click)="onClickJoinGroup()">JOIN CHAT</button>
     <form *ngIf="chatrooms[selected].isMember" (ngSubmit)="onClickSend()">
-      <input name="message" id="m" autocomplete="off" [(ngModel)]="message"/>
-      <button>Send</button>
+      <input *ngIf="typeFile" type="file" single (change)="onFileSelect($event)">
+      <input *ngIf="!typeFile" name="message" id="m" autocomplete="off" [(ngModel)]="message"/>
+      <button class="button">Send</button>
+      <button class="button" (click)="switchMode($event)">Modus</button>
     </form>
   </div>
 </div>
