--- a/cloud-chat/src/app/chat/chat.component.scss
+++ b/cloud-chat/src/app/chat/chat.component.scss
@@ -1,10 +1,15 @@
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body { font: 13px Helvetica, Arial; }
-form { padding: 3px; position: fixed; bottom: 0; width: 80%; }
-form input { border: 0; padding: 10px; width: 90%; border-radius: 10px; margin-right: .5%; }
-form button {
-  width: 9%; background: rgb(130, 224, 255); border: none; border-radius: 10px; padding: 10px; }
-#messages { width: 100%; height: 100%; margin: 0; padding-top: 50px!important; padding-bottom: 50px!important;}
+form { position: relative; width: 100%; }
+form input { margin-left: 0.5%; border: 0; padding: 10px; width: 80%; border-radius: 15px;}
+.button { margin-left: 0.5%; border: 0; padding: 10px; width: 9%; background: rgb(130, 224, 255); border-radius: 15px}
+#messages {
+  width: 100%;
+  height: calc(100% - 93px);
+  margin: 0;
+  padding-bottom: 50px!important;
+  overflow-y: scroll;
+}
 
 #chat-component-wrapper {
   width: 100%;
@@ -81,17 +86,14 @@ form button {
   float: left;
   width: 80%;
   height: 100%;
-  padding-bottom: 50px;
   box-sizing: padding-box;
-  overflow-y: scroll;
 }
 
 #header {
-  position: fixed;
-  top:0;
+  position: relative;
   width: 100%;
   text-wrap: normal;
-  min-height: 50px;
+  height: 50px;
   background: #fff;
 }
 
