--- a/cloud-chat/src/app/chat/chat.component.scss
+++ b/cloud-chat/src/app/chat/chat.component.scss
@@ -7,7 +7,6 @@ form input { margin-left: 0.5%; border: 0; padding: 10px; width: 80%; border-rad
   width: 100%;
   height: calc(100% - 93px);
   margin: 0;
-  padding-bottom: 50px!important;
   overflow-y: scroll;
 }
 
@@ -135,9 +134,17 @@ form input { margin-left: 0.5%; border: 0; padding: 10px; width: 80%; border-rad
 
 .message-timestamp {
   position: relative;
-  width: 100%;
+  float: right;
   font-size: 0.7em;
   text-align: right;
+  color: lightslategrey;
+}
+
+.message-mood {
+  position: relative;
+  float: left;
+  font-size: 0.7em;
+  text-align: left;
   color: lightslategrey;
 }
 
