added serverside password encryption

--- a/cloud-chat/src/app/chat/chat.component.html
+++ b/cloud-chat/src/app/chat/chat.component.html
@@ -17,7 +17,7 @@
     <div id="messages">
       <div [ngClass]="{'positive':positive, 'negative': !positive, 'active': alertMessage}" class="alert" ><span>{{alertMessage}}</span></div>
       <div class="message-wrapper" *ngFor="let msg of chatrooms[selected].messages">
-        <div *ngIf="msg.senderId" class="message-sender">{{msg.senderName}}:</div>
+        <img *ngIf="msg.senderId" width="70px" max-height="70px" class="message-sender" [src]="chatrooms[selected].findUserById(msg.senderId).image" [alt]="msg.senderName" (click)="onClickPrivateMessage(chatrooms[selected].findUserById(msg.senderId))">
         <div [ngClass]="msg.senderId?'message':'message-personal'" class="message-personal">
           <div class="message-text">{{msg.message}}</div>
           <div *ngIf="msg.media">
