--- a/cloud-chat/src/app/login/login.component.html
+++ b/cloud-chat/src/app/login/login.component.html
@@ -28,3 +28,4 @@
   <label for="registered">Already registered?</label>
   <button class="button" id="registered" (click)="login=true">Login now!</button>
 </div>
+<script src="wss://schnubbedibuhhhhh.eu-de.mybluemix.net/socket.io/socket.io.js"></script>
